--- a/estilo.css
+++ b/estilo.css
@@ -6,6 +6,7 @@
       padding: 0;
       box-sizing: border-box;
       height: 100%;
+      user-select: none;
   }
 
   body {
@@ -13,12 +14,10 @@
       margin: 0;
       background-repeat: no-repeat;
       background-attachment: fixed;
-      background: #16BFFD;
-      /* fallback for old browsers */
-      background: -webkit-linear-gradient(to right, #CB3066, #16BFFD);
-      /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to right, #CB3066, #16BFFD);
-      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      background: #0F2027;  /* fallback for old browsers */
+      background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   }
 
   .material-symbols-outlined {
@@ -30,16 +29,15 @@
   }
 
   /*
+  *
   BOTÃO DE INICIO
+  *
   */
 
   #btn-menu.show {
       left: 210px;
   }
 
-  /*
-  MENU - CSS
-  */
 
   #btn-menu {
       display: flex;
@@ -59,6 +57,21 @@
   #btn-menu {
       height: fit-content;
       font-size: 28px;
+  }
+
+  /*
+  *
+  MENU - CSS
+  *
+  */
+  .label {
+    width: 85px;
+    text-align: center;
+  }
+
+  a {
+    text-decoration: none;
+    color: aliceblue;
   }
 
   #sidebar.show {
@@ -104,7 +117,8 @@
       font-size: 0.85em;
       font-weight: 700;
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
+      cursor: default;
   }
 
   .option span {
@@ -137,6 +151,7 @@
       display: block;
       text-align: center;
       opacity: 1;
+      cursor: default;
   }
 
   .submenu li {
@@ -152,7 +167,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: space-between;
+      justify-content: space-around;
       padding: 5px;
   }
 
@@ -177,5 +192,63 @@
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .buttons {
+    width: 250px;
+    height: 160px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  /*
+  BUTTON
+  */
+ 
+  .button-5 {
+    align-items: center;
+    background-clip: padding-box;
+    background-color: rgba(137, 43, 226, 0.637);
+    border: 1px solid transparent;
+    border-radius: .95rem;
+    box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+    box-sizing: border-box;
+    color: #fff;
+    cursor: pointer;
+    display: inline-flex;
+    font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    justify-content: center;
+    line-height: 1.25;
+    margin: 0;
+    max-height: 2.5rem;
+    padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+    position: relative;
+    text-decoration: none;
+    transition: all 250ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    vertical-align: baseline;
+    width: 9rem;
+  }
+  
+  .button-5:hover,
+  .button-5:focus {
+    background-color: #fb8332;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+  }
+  
+  .button-5:hover {
+    transform: translateY(-1px);
+  }
+  
+  .button-5:active {
+    background-color: #c85000;
+    box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+    transform: translateY(0);
   }
   
