--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,15 +9,17 @@
       user-select: none;
   }
 
-  body {
-      height: 100vh;
+  body{
+      height: 100%;
       margin: 0;
+  }
+
+  body.main{
       background-repeat: no-repeat;
       background-attachment: fixed;
       background: #0F2027;  /* fallback for old browsers */
       background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
       background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
   }
 
   .material-symbols-outlined {
@@ -35,14 +37,14 @@
   */
 
   #btn-menu.show {
-      left: 210px;
+      left: 270px;
   }
 
 
   #btn-menu {
       display: flex;
       flex-direction: column;
-      background-color: rgba(0, 0, 0, 0.65);
+      background-color: rgba(0, 0, 0, 0.4);
       color: aliceblue;
       width: fit-content;
       padding: 3px;
@@ -77,7 +79,7 @@
 
   #sidebar {
       display: block;
-      width: 195px;
+      width: 240px;
       position: fixed;
       background-color: rgba(0, 0, 0, 0.15);
       padding: 5px;
@@ -86,6 +88,7 @@
       overflow-y: auto;
       left: -250px;
       transition: left 0.3s ease;
+      backdrop-filter: blur(15px);
   }
 
   #sidebar::-webkit-scrollbar {
@@ -171,7 +174,7 @@
      background-color: #202020;
   }
   .subitem span{
-    cursor: default;
+    cursor: pointer;
   }
 
   ul {
@@ -183,7 +186,12 @@
   /*
   CONTAINER
   */
-  
+  #iframe {
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+
   .chart {
     width: 85vh;
     height: 85vh;
@@ -270,22 +278,30 @@
   */
 
 .lateral{
-    width: 500px;
+    box-sizing: content-box;
+    width: fit-content;
     height: 100%;
-    position: absolute;
-    right: 0px;
+    position: fixed;
+    right: -450px;
     top: 0px;
     display: flex;
     flex-direction: row;
     align-items: center;
+    transition: right 0.3s ease;
 }
+
+.lateral.show {
+    right: 0px;
+}
+
 .lateral  div{
     margin: 8px;
 }
+
 #btn-lad {
     display: flex;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.65);
+    background-color: rgba(0, 0, 0, 0.35);
     color: aliceblue;
     width: fit-content;
     padding: 3px;
@@ -294,25 +310,37 @@
     transition: left 0.2s ease;
     height: fit-content;
     font-size: 28px;
+    backdrop-filter: blur(25px);
 }
+
 #btn-lad:hover{
     background-color: rgba(0, 0, 0, 0.9);
 }
+
 #text-lad {
     box-sizing: border-box;
     color: white;
+    width: 50vh;
     background-color: rgba(0, 0, 0, 0.15);
     height: inherit;
     padding: 50px;
     text-align: justify;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
+    backdrop-filter: blur(15px);
+    margin: 0;
 }
+
 #text-lad img{
     width: 100%;
     margin: 15px;
 }
+
+#text-lad::-webkit-scrollbar {
+  width: 0;
+}
+
 #ListaCasos{
   list-style: circle;
   padding-left: 30px;
