particles.js add

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,10 +17,10 @@
   body.main{
       background-repeat: no-repeat;
       background-attachment: fixed;
-      background: #0F2027;  /* fallback for old browsers */
-      background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  }
+      background: #232526;  /* fallback for old browsers */
+      background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to right, #414345, #232526); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
 
   .material-symbols-outlined {
       font-variation-settings:
@@ -36,7 +36,7 @@
   *
   */
 
-  #btn-menu.show {
+  #btn-menu.show, #btn-menu2.show {
       left: 270px;
   }
 
@@ -47,7 +47,7 @@
       background-color: rgba(0, 0, 0, 0.4);
       color: aliceblue;
       width: fit-content;
-      padding: 3px;
+      padding: 6px;
       border-radius: 50%;
       position: fixed;
       left: 15px;
@@ -55,9 +55,29 @@
       cursor: pointer;
       transition: left 0.2s ease;
       height: fit-content;
-      font-size: 28px;
   }
-
+  #btn-menu2 {
+      display: flex;
+      flex-direction: column;
+      background-color: rgba(0, 0, 0, 0.4);
+      color: aliceblue;
+      width: fit-content;
+      padding: 6px;
+      border-radius: 50%;
+      position: fixed;
+      left: 15px;
+      top: 65px;
+      cursor: pointer;
+      transition: left 0.2s ease;
+      height: fit-content;
+  }
+  #btn-menu2.active .material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 1,
+        'wght' 300,
+        'GRAD' 0,
+        'opsz' 48
+}
   /*
   *
   MENU - CSS
@@ -114,7 +134,7 @@
 
   .option {
       line-height: 3;
-      background-color: rgba(137, 43, 226, 0.459);
+      background-color: #A11D33;
       border-radius: 15px;
       padding: 3px;
       margin: 3px;
@@ -125,13 +145,13 @@
       cursor: default;
   }
   .option:hover{
-       background-color: rgba(129, 20, 230, 0.904);
+       background-color: #C71F37;
   }
   .option span {
       margin: 3px;
   }
   .option.clicked{
-      background-color: rgba(129, 20, 230, 0.904);
+      background-color:  #C71F37;
   }
   span.material-symbols-outlined {
       cursor: pointer;
@@ -162,8 +182,8 @@
       cursor: default;
   }
   
-  .submenu .subitem{
-      line-height: 25px;
+  .subitem{
+      line-height: 30px;
       font-size: 0.75em;
       font-weight: 700;
       background-color: #202020ab;
@@ -202,6 +222,7 @@
   .chart {
     width: 75vh;
     height: 75vh;
+    backdrop-filter: blur(5px);
   }
   
   .container {
@@ -256,13 +277,13 @@
   }
 
   #btn-melhor{
-   background-color:#A346EA; 
+   background-color:#DA1E37; 
   }
   #btn-medio{
-    background-color:#8200E6;
+    background-color:#A11D33;
   }
   #btn-pior{
-    background-color:#6500B3;
+    background-color:#6E1423;
   }
   
   .button-5:hover,
@@ -373,6 +394,11 @@
     margin: 15px;
 }
 
+#text-lad h2{
+    color: #DA1E37;
+    font-weight: bold;
+}
+
 #text-lad::-webkit-scrollbar {
   width: 0;
 }
@@ -380,4 +406,47 @@
 #ListaCasos{
   list-style: circle;
   padding-left: 30px;
+}
+
+/*
+HOMEPAGE
+*/
+@font-face {
+	font-family: 'nexa_boldregular';
+	font-weight: bold;
+	font-style: normal;
+	src: url('../fonts/nexa_boldfree_macroman/Nexa_Free_Bold-webfont.eot');
+	src: url('../fonts/nexa_boldfree_macroman/Nexa_Free_Bold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/nexa_boldfree_macroman/Nexa_Free_Bold-webfont.woff2') format('woff2'), url('../fonts/nexa_boldfree_macroman/Nexa_Free_Bold-webfont.woff') format('woff'), url('../fonts/nexa_boldfree_macroman/Nexa_Free_Bold-webfont.ttf') format('truetype'), url('../fonts/nexa_boldfree_macroman/Nexa_Free_Bold-webfont.svg#nexa_boldregular') format('svg');
+}
+.content__inner{
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+}
+.content__title {
+	font-family: 'nexa_boldregular', sans-serif;
+	font-size: 5vw;
+  height: fit-content;
+	font-weight: normal;
+	color: #fff;
+	text-align: center;
+	margin: 0;
+	pointer-events: none;
+}
+
+.content__subtitle {
+  height: fit-content;
+	font-size: 1.25em;
+	color: #fff;
+	padding: 0 0.75em;
+	margin: 0;
+	letter-spacing: 0.5em;
+	text-indent: 0.5em;
+	text-align: center;
+	font-weight: bold;
+	text-transform: uppercase;
 }
