--- a/css/fundo.css
+++ b/css/fundo.css
@@ -11,10 +11,10 @@ body {
   display: block;
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: -1;
 }
 
-/*
+/* ANIMATION GRADIENT
 *{
     padding: 0;
     margin: 0;
