--- a/css/styles.less
+++ b/css/styles.less
@@ -8,7 +8,7 @@ table {
 th,
 td {
 	padding: 15px;
-	background-color: rgba(255,255,255,0.2);
+	background-color: rgba(255, 255, 255, 0.13);
 	color: #fff;
 }
 
@@ -18,17 +18,17 @@ th {
 
 thead {
 	th {
-		background-color: #55608f;
+		background-color: #DA1E37;
 	}
 }
 
 tbody {
 	tr {
 		&:hover {
-			background-color: rgba(255,255,255,0.3);
+			background-color: #a11d33ad;
 		}
 		th {
-			background-color: #55608f8e;
+			background-color: #a11d33ad;
 		}
 	}
 	td {
@@ -41,7 +41,7 @@ tbody {
 				right: 0;
 				top: -9999px;
 				bottom: -9999px;
-				background-color: rgba(255,255,255,0.2);
+				background-color: #a11d33ad;
 				z-index: -1;
 			}
 		}
