--- a/css/estilo.css
+++ b/css/estilo.css
@@ -376,6 +376,7 @@
 
 #text-lad {
     box-sizing: border-box;
+    line-height: 18px;
     color: white;
     width: 50vh;
     background-color: rgba(0, 0, 0, 0.15);
@@ -410,7 +411,7 @@
 
 #text-lad div.code{
     width: fit-content;
-    font-size: 15px;
+    font-size: 13px;
     padding: 30px;
     background-color: #d2d5d86b;
 }
